Formalize and define the new `/station/{id}/schedule` API endpoint.
